[gd_scene load_steps=9 format=3 uid="uid://dqfifkycv7b7r"]

<<<<<<< HEAD:scenes/rpg_scene.tscn
[ext_resource type="Script" path="res://scripts/rpg_scene.gd" id="1_y36ia"]
[ext_resource type="Script" path="res://scripts/rpg_player.gd" id="2_erf26"]
[ext_resource type="Texture2D" uid="uid://dkcwjpmkycpx" path="res://art/placeholder rpg.jpg" id="3_mjriw"]
[ext_resource type="Script" path="res://scripts/background_placeholder.gd" id="4_7k43n"]
[ext_resource type="Script" path="res://scripts/battle_handler.gd" id="5_thmwu"]
[ext_resource type="Script" path="res://scripts/turn_order_handler.gd" id="6_jyuvq"]
[ext_resource type="PackedScene" uid="uid://bh6b84m6d7yqv" path="res://scenes/enemy.tscn" id="7_b8lym"]
[ext_resource type="Texture2D" uid="uid://1f7bh4doxxvn" path="res://art/gloombruh.png" id="8_30hme"]
=======
[ext_resource type="Texture2D" uid="uid://dkcwjpmkycpx" path="res://art/placeholder rpg.jpg" id="1_gusyn"]
[ext_resource type="Script" path="res://rpg_scene.gd" id="1_nybo4"]
[ext_resource type="Script" path="res://turn_order_handler.gd" id="2_8y0kd"]
[ext_resource type="Script" path="res://player.gd" id="2_epyl3"]
[ext_resource type="Script" path="res://area_2d.gd" id="3_1cs0x"]
[ext_resource type="Script" path="res://battle_handler.gd" id="3_3tdvk"]
[ext_resource type="Script" path="res://background_placeholder.gd" id="4_ufr6f"]
[ext_resource type="PackedScene" path="res://enemy.tscn" id="6_3oedg"]
<<<<<<< Updated upstream:rpg_scene.tscn
=======
>>>>>>> ffdd8b9e504b0876402b76614c012a6500ee801e:rpg_scene.tscn
>>>>>>> Stashed changes:scenes/rpg_scene.tscn

[node name="RPGScene" type="Node2D"]
script = ExtResource("1_y36ia")

[node name="Player" type="Node2D" parent="."]
script = ExtResource("2_erf26")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("3_mjriw")
script = ExtResource("4_7k43n")
metadata/_edit_lock_ = true

[node name="BattleHandler" type="Node2D" parent="."]
script = ExtResource("5_thmwu")

[node name="PlayerSide" type="Node2D" parent="BattleHandler"]

[node name="PlayerSpawn" type="Marker2D" parent="BattleHandler/PlayerSide"]
position = Vector2(276, 438)

[node name="EnemySpawns" type="Node2D" parent="BattleHandler"]

[node name="1Enemy1Spawn" type="Marker2D" parent="BattleHandler/EnemySpawns"]
position = Vector2(855, 437)

[node name="2Enemy1Spawn" type="Marker2D" parent="BattleHandler/EnemySpawns"]
position = Vector2(801, 399)

[node name="2Enemy2Spawn" type="Marker2D" parent="BattleHandler/EnemySpawns"]
position = Vector2(881, 473)

[node name="3Enemy1Spawn" type="Marker2D" parent="BattleHandler/EnemySpawns"]
position = Vector2(881, 391)

[node name="3Enemy2Spawn" type="Marker2D" parent="BattleHandler/EnemySpawns"]
position = Vector2(789, 450)

[node name="3Enemy3Spawn" type="Marker2D" parent="BattleHandler/EnemySpawns"]
position = Vector2(866, 498)

[node name="4Enemy1Spawn" type="Marker2D" parent="BattleHandler/EnemySpawns"]
position = Vector2(824, 426)

[node name="4Enemy2Spawn" type="Marker2D" parent="BattleHandler/EnemySpawns"]
position = Vector2(919, 423)

[node name="4Enemy3Spawn" type="Marker2D" parent="BattleHandler/EnemySpawns"]
position = Vector2(785, 500)

[node name="4Enemy4Spawn" type="Marker2D" parent="BattleHandler/EnemySpawns"]
position = Vector2(897, 499)

[node name="TurnOrderHandler" type="Node" parent="BattleHandler"]
script = ExtResource("6_jyuvq")

[node name="UI Elements" type="Control" parent="BattleHandler"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Enemy" parent="." instance=ExtResource("7_b8lym")]
position = Vector2(851, 210)
metadata/_edit_group_ = true

[node name="Default_Enemy_Sprite" type="Sprite2D" parent="Enemy"]
scale = Vector2(0.14, 0.14)
texture = ExtResource("8_30hme")
